<resources>
    <string name="app_name">Examen_viaje_22_23</string>
    <string name="descripcion_spinner">Elige una de las ciudades (madrid, barcelona o toledo)</string>
    <string name="precio_billete">Precio Billete</string>
    <string name="cantidad_billetes">Cantidad de billetes</string>
    <string name="siguiente">Siguiente</string>
    <string name="total">Total</string>
    <string name="total_seguro">Seguro:</string>
    <string name="preciototal">Precio Total</string>
    <string name="cero">0.0</string>
    <string name="descuento">Descuento Grupal</string>
    <string name="seguro">Seguro</string>
    <string name="si">Si -> 2€ por billete</string>
    <string name="no">NO -> 0€</string>
    <string name="total_pagar">Total a pagar:</string>
    <string name="saldo_disponible">Saldo Disponible:</string>
    <string name="pagar">Pagar:</string>
</resources>